--- a/announcements/templates/announcements/announcement_list.html
+++ b/announcements/templates/announcements/announcement_list.html
@@ -1,13 +1,14 @@
 {% extends "announcements/base.html" %}
 
 {% load i18n %}
+{% load url from future %}
 
 {% block head_title %}{% trans "Announcements Admin" %}{% endblock %}
 
 {% block body_class %}announcements{% endblock %}
 {% block body %}
         <h2>{% trans "Announcements" %}</h2>
-        <a href="{% url announcements_create %}" class="btn btn-success">
+        <a href="{% url "announcements_create" %}" class="btn btn-success">
             {% trans "Add New Announcement" %}
         </a>
         
@@ -15,7 +16,7 @@
             {% for announcement in announcement_list %}
                 <tr>
                     <td>
-                        <a href="{% url announcements_update pk=announcement.pk %}" class="btn btn-mini">
+                        <a href="{% url "announcements_update" pk=announcement.pk %}" class="btn btn-mini">
                             <i class="icon icon-pencil"></i>
                             {% trans "Edit" %}
                         </a>
