--- a/announcements/templates/announcements/announcement_confirm_delete.html
+++ b/announcements/templates/announcements/announcement_confirm_delete.html
@@ -2,12 +2,13 @@
 
 {% load i18n %}
 {% load bootstrap_tags %}
+{% load url from future %}
 
 {% block body_class %}announcements{% endblock %}
 
 {% block body %}
     <h1>{% trans "Delete Announcement?" %}</h1>
-    {% url announcements_delete pk=announcement.pk as post_url %}
+    {% url "announcements_delete" pk=announcement.pk as post_url %}
     <p class="lead">
         {% trans "Are you sure you want to delete this announcement?" %}
     </p>
